fix: Escape HTML special characters in tooltips and improve sidebar visibility in dark mode.

--- a/PUBLICATION_COMPLETE.html
+++ b/PUBLICATION_COMPLETE.html
@@ -420,6 +420,23 @@
             font-size: 0.9rem;
             opacity: 0.85;
         }
+
+        /* Sidebar Content Visibility Fix for Dark Mode */
+        #sidebar h4, #sidebar h5 {
+            color: var(--text);
+        }
+
+        #sidebar strong {
+            color: var(--text);
+        }
+
+        #sidebar ul, #sidebar li {
+            color: var(--text);
+        }
+
+        .sidebar-header h3, .sidebar-header p {
+            color: var(--text);
+        }
     </style>
 </head>
 <body>
@@ -1080,7 +1097,7 @@
 <p></p>
 <p>Adjutant Voss.</p>
 <p></p>
-<p>Voss looked less like a human and more like a high-end peripheral. His suit was a matte-gray, frictionless material standard for <span class="tooltip" data-tip="The "Concord Order," the ruling faction dedicated to absolute stability, standard tuning, and the suppression of dissonance.">C-Order</span> administration. He sat perfectly still, his hands folded on the desk, radiating an aura of absolute stability.</p>
+<p>Voss looked less like a human and more like a high-end peripheral. His suit was a matte-gray, frictionless material standard for <span class="tooltip" data-tip="The &quot;Concord Order,&quot; the ruling faction dedicated to absolute stability, standard tuning, and the suppression of dissonance.">C-Order</span> administration. He sat perfectly still, his hands folded on the desk, radiating an aura of absolute stability.</p>
 <p></p>
 <strong>> TARGET_ANALYSIS:</strong>
 <strong>> CLASS: ADJUTANT</strong>
@@ -2362,7 +2379,7 @@
 <strong>> ALERT: GROUND_LOST</strong>
 <strong>> VOLTAGE: SPIKING</strong>
 <p></p>
-<p>Taro grabbed the silver ring around his neck. The Voss-issued <span class="tooltip" data-tip="A hardware governor that caps a user's resonant output at safe levels (approx 200 Watts). Tampering with it causes "Unbounded" expression and self-destruction.">Limiter</span> .</p>
+<p>Taro grabbed the silver ring around his neck. The Voss-issued <span class="tooltip" data-tip="A hardware governor that caps a user's resonant output at safe levels (approx 200 Watts). Tampering with it causes &quot;Unbounded&quot; expression and self-destruction.">Limiter</span> .</p>
 <p>It was burning hot. The metal was warping under the thermal load of his internal signal. It smelled like burning hair.</p>
 <p>He didn't care.</p>
 <p></p>
