--- a/PUBLICATION_READY_NOVEL.html
+++ b/PUBLICATION_READY_NOVEL.html
@@ -420,6 +420,23 @@
             font-size: 0.9rem;
             opacity: 0.85;
         }
+
+        /* Sidebar Content Visibility Fix for Dark Mode */
+        #sidebar h4, #sidebar h5 {
+            color: var(--text);
+        }
+
+        #sidebar strong {
+            color: var(--text);
+        }
+
+        #sidebar ul, #sidebar li {
+            color: var(--text);
+        }
+
+        .sidebar-header h3, .sidebar-header p {
+            color: var(--text);
+        }
     </style>
 </head>
 <body>
