--- a/PUBLICATION_READY_NOVEL.html
+++ b/PUBLICATION_READY_NOVEL.html
@@ -340,7 +340,7 @@
             opacity: 0;
             visibility: hidden;
             transition: all 0.2s ease;
-            z-index: 10;
+            z-index: 2000;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             pointer-events: none;
         }
@@ -422,20 +422,17 @@
         }
 
         /* Sidebar Content Visibility Fix for Dark Mode */
-        #sidebar h4, #sidebar h5 {
+        #sidebar-toggle {
             color: var(--text);
         }
 
-        #sidebar strong {
-            color: var(--text);
+        #sidebar, #sidebar h4, #sidebar h5, #sidebar summary, #sidebar p, #sidebar blockquote, #sidebar li, #sidebar strong {
+            color: var(--text) !important;
         }
 
-        #sidebar ul, #sidebar li {
-            color: var(--text);
-        }
-
-        .sidebar-header h3, .sidebar-header p {
-            color: var(--text);
+        #sidebar .subtitle {
+            opacity: 0.6;
+            color: var(--text) !important;
         }
     </style>
 </head>
