feat: Implement public web reader for the novel with interactive UI, theme switching, and a Residual Archive System.

--- a/PUBLICATION_READY_NOVEL.html
+++ b/PUBLICATION_READY_NOVEL.html
@@ -581,7 +581,19 @@
 <header class="title-page">
     <h1>KEEPING TIME</h1>
     <div class="subtitle">VOLUME 1: THE IMPULSE</div>
-    <p>By the Architect</p>
+    <p style="font-family: var(--font-mono); font-size: 0.9rem; letter-spacing: 0.3em; margin-top: 32px;">
+        <span style="opacity: 0.4; text-decoration: line-through;">By the Architect</span>
+        <br>
+        <span style="color: var(--accent); font-weight: bold; animation: glitch 3s infinite;">> OVERRIDE: TheDonCipher</span>
+    </p>
+    <style>
+        @keyframes glitch {
+            0%, 90%, 100% { transform: translate(0); opacity: 1; }
+            92% { transform: translate(-2px, 1px); opacity: 0.8; }
+            94% { transform: translate(2px, -1px); opacity: 0.9; }
+            96% { transform: translate(-1px, 2px); opacity: 0.85; }
+        }
+    </style>
     </header>
     <!-- TABLE OF CONTENTS (Legacy Hidden) -->
     <div style="display:none;">
