1 feat: humanize novel terminology and enhance web interactivity in public/index.html    2    3 - Synchronizes web novel content with humanized manuscript changes across all 17 chapters.    4 - Refactors technical jargon to musical/acoustic metaphors (e.g., "Glitch" -> "Wrong Note", "Jitter" -> "Sawtooth      Oscillation").    5 - Implements interactive hover tooltips for technical terms and lore definitions.    6 - Adds philosophical narrator prose to deepen thematic resonance and narrative voice.    7 - Integrates UI "Organism" response to Chapter 4's gravity shift (sidebar rotation and color shift).    8 - Systematically cleans up encoding artifacts and accidental text insertions.    9 - Updates character guide, glossary, and portal to maintain consistent "Wrong Note" terminology.

--- a/public/character_guide.html
+++ b/public/character_guide.html
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="description">
-                    The protagonist. Initially misclassified as a Rhythm Operator, Taro is revealed to be "The Silence": a user who doesn't emit resonance but <em>absorbs</em> it. His overwhelming sensitivity to noise is not a glitch but the signature of a living damping field.
+                    The protagonist. Initially misclassified as a Rhythm Operator, Taro is revealed to be "The Silence": a user who doesn't emit resonance but <em>absorbs</em> it. His overwhelming sensitivity to noise is not a wrong note but THE signature of a living damping field.
                     
                     <div class="arc-summary">
                         <strong>Arc:</strong> From trying to "fix" himself to accepting his role as the quiet between the notes—the only force that can silence the chaos.
@@ -307,7 +307,7 @@
                     Assigned the "Tank" class at birth, Elara suffers from <strong>Resonance Dysphoria</strong>—her soul-frequency doesn't match her imposed hull. She illegally modulates herself into a high-fidelity treble construct: slender, glass-winged, and finally <em>right</em>.
                     
                     <div class="arc-summary">
-                        <strong>Arc:</strong> From being trapped in the "Kimura" hull to teaching Taro that "glitching" is just "modulating without permission."
+                        <strong>Arc:</strong> From being trapped in the "Kimura" hull to teaching Taro that "wrong noting" is just "modulating without permission."
                     </div>
                 </div>
             </div>
