--- a/public/glossary.html
+++ b/public/glossary.html
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class="term-entry" data-term="twilight band sector 4 glitch zone buffer">
+            <div class="term-entry" data-term="twilight band sector 4 wrong note zone buffer">
                 <div class="term-name">Twilight Band (Sector 4)</div>
                 <div class="term-description">
                     The buffer zone between the High-Fidelity Inner City and the Low-Fi Outer Slums, characterized by inconsistent reality rendering. Textures pop in and out. The air tastes of both ozone (wealth) and sulfur (poverty).
