--- a/public/portal.html
+++ b/public/portal.html
@@ -253,7 +253,7 @@
         <section class="novel-panel">
             <div class="system-status" style="color:var(--gold)">* FEATURED_CONTENT *</div>
             <h2 style="font-size: 4rem;">KEEPING TIME</h2>
-            <p style="font-size: 1.4rem; max-width: 900px; margin: 20px auto;">"In a world where sound is physics, one boy's interface glitches—revealing the code behind reality."</p>
+            <p style="font-size: 1.4rem; max-width: 900px; margin: 20px auto;">"In a world where sound is physics, one boy's interface wrong notes—revealing THE code behind reality."</p>
             <a href="./index.html" class="btn-read">Initialize Neural Link</a>
         </section>
 
