feat: implement Human Infrastructure fusion and restore web-novel tooltips
- Integrates ordinary life elements into the narrative fabric across Chapters 1, 3, 4, 6, 8, 10, 14, and 17.
- Adds sensory infrastructural details (humming ventilation, mag-lev transit chords) to ground the cyberpunk setting.
- Implements cultural rituals like the 'Morning Synchronization Chant' and 'Wedding Vows in Tempo' to show a lived-in world.
- Injects 'Human Tenderness' moments (neighborly picture-frame adjustment) during high-stakes sequences.
- Restores missing hover tooltip CSS in PUBLICATION_READY_NOVEL.html and public/index.html to fix UI regression.
- Updates build_publication.ps1 to correctly target the public/index.html web-novel directory.

--- a/PUBLICATION_READY_NOVEL.html
+++ b/PUBLICATION_READY_NOVEL.html
@@ -290,6 +290,54 @@
         .narrative-fragment.visible { opacity: 1; transform: translateX(0); }
         .fragment-text { font-family: var(--font-main); font-size: 0.9rem; font-style: italic; }
 
+        /* Tooltips */
+        .tooltip {
+            position: relative;
+            border-bottom: 1px dashed var(--accent);
+            cursor: help;
+            color: var(--accent);
+            transition: all 0.3s ease;
+        }
+
+        .tooltip::after {
+            content: attr(data-tip);
+            position: absolute;
+            bottom: 125%;
+            left: 50%;
+            transform: translateX(-50%) translateY(10px);
+            background: rgba(255, 255, 255, 0.95);
+            color: var(--text);
+            padding: 8px 12px;
+            border: 1px solid var(--accent);
+            border-radius: 4px;
+            font-size: 0.85rem;
+            font-family: var(--font-mono);
+            white-space: normal;
+            width: max-content;
+            max-width: 250px;
+            z-index: 9999;
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+            box-shadow: 0 4px 15px var(--accent-glow);
+            transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+            backdrop-filter: blur(4px);
+        }
+
+        [data-theme="dark"] .tooltip::after {
+            background: rgba(10, 10, 12, 0.95);
+        }
+
+        .tooltip:hover {
+            background: var(--accent-glow);
+        }
+
+        .tooltip:hover::after {
+            opacity: 1;
+            visibility: visible;
+            transform: translateX(-50%) translateY(0);
+        }
+
         @media (max-width: 768px) {
             body { padding-left: 0; }
             .nav-ui { left: 0; width: 100%; }
