1 feat: implement Causal Chain Organism v1.0.0 and enhance narrative UI    2    3 - Refactor narrative engine into a single authoritative frame-based loop (organismTick).    4 - Implement nonlinear stress memory, force resolution engine, and emergent instability.    5 - Replace animated 'tentacle' fractures with persistent, jagged node-based physics.    6 - Upgrade sidebar to a living 'Diagnostic Spine' with vitals icons and dynamic status alerts.    7 - Fix build script paragraph wrapping and restore missing chapter headers/sidebar data.    8 - Add 4-layer fracture stack including SVG branching and Canvas capillary web.    9 - Implement narrative authority overrides for interference zones and healing suppression.

--- a/PUBLICATION_READY_NOVEL.html
+++ b/PUBLICATION_READY_NOVEL.html
@@ -366,7 +366,9 @@
         <span class="branch branch-3"></span>
     </div>
     <div class="surveillance-indicator" id="surveillance"></div>
-    <aside id="residual-archive"><div class="resonance-monitor"></div><div class="residual-layer" id="residual-layer"></div></aside>
+    <aside id="residual-archive"><div class="resonance-monitor"></div><div class="residual-layer" id="residual-layer">
+        <!-- NOTE: Sidebar content goes here -->
+    </div></aside>
 
     <button class="back-to-top" id="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" aria-label="Back to top">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m18 15-6-6-6 6"/></svg>
